<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.matrix</groupId>
    <artifactId>gdmatrix</artifactId>
    <version>3.0</version>
  </parent>
  <artifactId>gdmatrix-ant</artifactId>
  <packaging>jar</packaging>
  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>gdmatrix-common</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>gdmatrix-aoc</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant-javamail</artifactId>
      <version>1.10.12</version>
      <scope>runtime</scope>
    </dependency>     
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant-jsch</artifactId>
      <version>1.10.12</version>
      <scope>runtime</scope>
    </dependency>       
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant-commons-net</artifactId>
      <version>1.10.12</version>
      <scope>runtime</scope>    
    </dependency>
    <dependency>
      <groupId>com.jcraft</groupId>
      <artifactId>jsch</artifactId>
      <version>0.1.55</version>
      <scope>runtime</scope> 
    </dependency>      
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
    </dependency>       
    <dependency>
      <groupId>org.apache.xmlbeans</groupId>
      <artifactId>xmlbeans</artifactId>
      <version>3.1.0</version>
    </dependency>
    <!-- mvn org.apache.maven.plugins:maven-install-plugin:2.3.1:install-file -Dfile=.\wss4j-1.6.19.gdmatrix.jar -DgroupId=org.apache.ws.security -DartifactId=wss4j -Dversion=1.6.19.gdmatrix -DlocalRepositoryPath=.\repository -Dpackaging=jar -->
    <dependency>
      <groupId>org.apache.ws.security</groupId>
      <artifactId>wss4j</artifactId>
      <version>1.6.19.gdmatrix</version>
    </dependency>    
    <!-- mvn org.apache.maven.plugins:maven-install-plugin:2.3.1:install-file -Dfile=C:\gdmatrix\lib\ingest-service.jar -DgroupId=org.santfeliu -DartifactId=iarxiu-ingest-service -Dversion=1.0 -Dpackaging=jar -DlocalRepositoryPath=C:\gdmatrix\m2 -->
    <dependency>
      <groupId>org.santfeliu</groupId>
      <artifactId>iarxiu-ingest-service</artifactId>
      <version>1.0</version>
    </dependency>
    <!-- mvn org.apache.maven.plugins:maven-install-plugin:2.3.1:install-file -Dfile=C:\gdmatrix\lib\xmltypes.jar -DgroupId=org.santfeliu -DartifactId=iarxiu-xmltypes -Dversion=1.0 -Dpackaging=jar -DlocalRepositoryPath=C:\gdmatrix\m2 -->
    <dependency>
      <groupId>org.santfeliu</groupId>
      <artifactId>iarxiu-xmltypes</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.ws</groupId>
      <artifactId>spring-ws-security</artifactId>
      <version>2.4.4.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.ws</groupId>
      <artifactId>jaxws-ri</artifactId>
      <version>${jaxws-ri.version}</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>runtime</scope>
    </dependency>     
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>fop</artifactId>
      <version>2.4</version>
      <scope>runtime</scope>
    </dependency>
               
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <finalName>GDMatrixANTJavaInstall</finalName>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>java-assembly</id>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <descriptors>
                <descriptor>src/main/assembly/java-assembly.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>        
    </plugins>
  </build>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <description>Classes needed to execute ANT tasks. Generates a zip package to optionally execute those tasks separeted from GDMatrix installation.</description>
</project>